Fixes several Gdk related key event problems on Linux / Solaris. r=,mo=Pavlov, a=blizzard bug 53667 - alt + left/right doesn't navigate back/forward bug 55792 - ctrl + left/right not skipping words bug 54694 - ctrl + left segfaults